--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -84,6 +84,7 @@
 <script type="text/javascript" src="../rules/intersections.js"></script>
 <script type="text/javascript" src="../rules/movenode.js"></script>
 <script type="text/javascript" src="../rules/movetree.js"></script>
+<script type="text/javascript" src="../rules/problems.js"></script>
 <script type="text/javascript" src="../rules/properties.js"></script>
 <script type="text/javascript" src="../rules/treepath.js"></script>
 <!-- Sgf -->
@@ -129,6 +130,7 @@
 <script type="text/javascript" src="../rules/intersections_test.js"></script>
 <script type="text/javascript" src="../rules/movenode_test.js"></script>
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
+<script type="text/javascript" src="../rules/problems_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
 <!-- Sgf Tests -->
@@ -165,6 +167,7 @@ $(document).ready(function() {
   glift.rules.intersectionsTest();
   glift.rules.gobanTest();
   glift.rules.propertiesTest();
+  glift.rules.problemsTest();
 
   glift.controllers.baseTest();
   glift.controllers.staticProblemTest();
