--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -60,6 +60,7 @@
 <script type="text/javascript" src="../rules/intersections.js"></script>
 <script type="text/javascript" src="../rules/movenode.js"></script>
 <script type="text/javascript" src="../rules/movetree.js"></script>
+<script type="text/javascript" src="../rules/problems.js"></script>
 <script type="text/javascript" src="../rules/properties.js"></script>
 <script type="text/javascript" src="../rules/treepath.js"></script>
 <!-- Sgf -->
