fixing some small problem related bugs.

--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -108,7 +108,8 @@
         var basicProblem = glift.widgets.basicProblem({
           sgfStringList: [
               testdata.sgfs.complexproblem,
-              testdata.sgfs.realproblem
+              testdata.sgfs.realproblem,
+              testdata.sgfs.gogameguruHard
           ],
           divId: "glift_display1"
         });
