--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -82,9 +82,11 @@
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
+<script type="text/javascript" src="../widgets/board_editor.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base.js"></script>
+<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
 <script type="text/javascript" src="../widgets/options/problem.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
