--- a/src/htmltests/IconBoardTester.html
+++ b/src/htmltests/IconBoardTester.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
+<script type="text/javascript" src="../util/performance.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
 <script type="text/javascript" src="../util/regions.js"></script>
 <script type="text/javascript" src="../util/test_util.js"></script>
