--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -1,10 +1,9 @@
 <html>
 <head>
 
-<title> GameViewerTester </title>
+<title> ProblemTester </title>
 <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
-<script type="text/javascript" src="../testdata/gogameguru_commentary.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
@@ -96,7 +95,7 @@
         padding: 0;
       }
       #glift_display1 {
-        height:100%;
+        height:95%;
         position:relative;
       }
     </style>
@@ -108,10 +107,15 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        var gameViewer = glift.widgets.baseWidget({
-          sgfString: testdata.gogameguru_commentary,
-          theme: 'DEPTH',
-          goBoardBackground: '../themes/assets/bambootile_warm.jpg',
+        //glift.global.performanceDebugLevel = 'info'
+        var basicProblem = glift.widgets.problem({
+          sgfUrlList: [
+              "../testdata/ajax3_13.sgf",
+              "../testdata/ajax_problem.sgf",
+              "../testdata/ajax_problem2.sgf",
+              "../testdata/9x9prob.sgf"
+          ],
+          useCommentBar: true,
           divId: "glift_display1"
         });
       </script>
