--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -79,8 +79,8 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/basic_problem.js"></script>
 <script type="text/javascript" src="../widgets/board_editor.js"></script>
+<script type="text/javascript" src="../widgets/problem.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base.js"></script>
@@ -107,7 +107,7 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        var basicProblem = glift.widgets.basicProblem({
+        var basicProblem = glift.widgets.baseWidget({
           sgfString: testdata.sgfs.marktest,
           divId: "glift_display1",
           theme: "DEPTH",
