--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -79,8 +79,8 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/basic_problem.js"></script>
 <script type="text/javascript" src="../widgets/board_editor.js"></script>
+<script type="text/javascript" src="../widgets/problem.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base.js"></script>
@@ -108,12 +108,14 @@
       <div id="extra_info"></div>
       <script type="text/javascript">
         //glift.global.performanceDebugLevel = 'info'
-        var basicProblem = glift.widgets.basicProblem({
+        var basicProblem = glift.widgets.problem({
           sgfStringList: [
+              testdata.sgfs.trivialproblem,
               testdata.sgfs.complexproblem,
               testdata.sgfs.realproblem,
               testdata.sgfs.gogameguruHard
           ],
+          useCommentBar: true,
           divId: "glift_display1"
         });
       </script>
