--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -103,8 +103,8 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/basic_problem.js"></script>
 <script type="text/javascript" src="../widgets/board_editor.js"></script>
+<script type="text/javascript" src="../widgets/problem.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base.js"></script>
