--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -107,7 +107,7 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        var basicProblem = glift.widgets.baseWidget({
+        var basicProblem = glift.widgets.problem({
           sgfString: testdata.sgfs.marktest,
           divId: "glift_display1",
           theme: "DEPTH",
