--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title> ProblemTester </title>
+<title> AjaxTester </title>
 <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
