--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -103,13 +103,15 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/problem.js"></script>
+<script type="text/javascript" src="../widgets/manager.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
-<script type="text/javascript" src="../widgets/options/base.js"></script>
-<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/options/problem.js"></script>
+<script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
+<script type="text/javascript" src="../widgets/options/icon_actions.js"></script>
+<script type="text/javascript" src="../widgets/options/sgf_options.js"></script>
+<script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
@@ -145,6 +147,8 @@
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
+<!-- Widgets Tests -->
+<script type="text/javascript" src="../widgets/widgets_test.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
@@ -185,6 +189,9 @@ $(document).ready(function() {
 
   // Display + Rules bridge tests
   glift.bridge.croppingTest();
+
+  // And finally: an end to end test!
+  glift.widgets.widgetsTest();
 });
 </script>
 
