--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -80,13 +80,15 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/problem.js"></script>
+<script type="text/javascript" src="../widgets/manager.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
-<script type="text/javascript" src="../widgets/options/base.js"></script>
-<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/options/problem.js"></script>
+<script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
+<script type="text/javascript" src="../widgets/options/icon_actions.js"></script>
+<script type="text/javascript" src="../widgets/options/sgf_options.js"></script>
+<script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
