--- a/src/htmltests/LessonTester.html
+++ b/src/htmltests/LessonTester.html
@@ -79,13 +79,15 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/problem.js"></script>
+<script type="text/javascript" src="../widgets/manager.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
-<script type="text/javascript" src="../widgets/options/base.js"></script>
-<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/options/problem.js"></script>
+<script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
+<script type="text/javascript" src="../widgets/options/icon_actions.js"></script>
+<script type="text/javascript" src="../widgets/options/sgf_options.js"></script>
+<script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
@@ -108,13 +110,17 @@
       <div id="extra_info"></div>
       <script type="text/javascript">
         var basicProblem = glift.widgets.problem({
+          useCommentBar: true,
+          divId: "glift_display1",
           sgfUrlList: [
               "../testdata/tm_lesson/19pt_1.sgf",
               "../testdata/tm_lesson/19pt_2.sgf",
-              "../testdata/tm_lesson/19Pt_CorrectNext.sgf",
-          ],
-          useCommentBar: true,
-          divId: "glift_display1"
+              {
+                sgfUrl: "../testdata/tm_lesson/19Pt_CorrectJoseki_WhiteToPlay.sgf",
+                initialPosition: '1', // b's first move is a pass.
+                problemType: 'ALL_CORRECT'
+              },
+          ]
         });
       </script>
     </div>
