--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -82,11 +82,10 @@
 <script type="text/javascript" src="../widgets/manager.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
+<script type="text/javascript" src="../widgets/options/all_correct_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/base_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
-<script type="text/javascript" src="../widgets/options/icon_actions.js"></script>
-<script type="text/javascript" src="../widgets/options/sgf_options.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
@@ -113,13 +112,17 @@
         var basicProblem = glift.widgets.create({
           sgfList: [
             testdata.sgfs.complexproblem,
-            testdata.sgfs.trivialproblem,
+            {
+              widgetType: 'EXAMPLE',
+              sgfString: testdata.sgfs.trivialproblem
+            },
             testdata.sgfs.realproblem,
             testdata.sgfs.gogameguruHard
           ],
-          useCommentBar: true,
-          defaultWidgetType: 'STANDARD_PROBLEM',
-          divId: "glift_display1"
+          divId: "glift_display1",
+          sgfDefaults: {
+            widgetType: 'STANDARD_PROBLEM'
+          }
         });
       </script>
     </div>
