--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -70,6 +70,7 @@
 <script type="text/javascript" src="../sgf/props.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
+<script type="text/javascript" src="../controllers/all_correct_problem.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
@@ -82,8 +83,8 @@
 <script type="text/javascript" src="../widgets/manager.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
-<script type="text/javascript" src="../widgets/options/all_correct_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
@@ -108,12 +109,14 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        var basicProblem = glift.widgets.problem({
-          sgfString: testdata.sgfs.marktest,
+        var created = glift.widgets.create({
+          sgf: testdata.sgfs.marktest,
           divId: "glift_display1",
           theme: "DEPTH",
           goBoardBackground: '../themes/assets/bambootile_warm.jpg',
-          boardRegion: 'TOP_RIGHT'
+          sgfDefaults : {
+            widgetType: 'EXAMPLE'
+          }
         });
       </script>
     </div>
