--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -70,6 +70,7 @@
 <script type="text/javascript" src="../sgf/props.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
+<script type="text/javascript" src="../controllers/all_correct_problem.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
@@ -82,8 +83,8 @@
 <script type="text/javascript" src="../widgets/manager.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
-<script type="text/javascript" src="../widgets/options/all_correct_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
@@ -139,29 +140,29 @@
     <div id="glift_display5"></div>
     <div id="extra_info"></div>
     <script type="text/javascript">
-      var basicProblem = glift.widgets.basicProblem({
-        sgfString: testdata.sgfs.complexproblem,
+      var basicProblem = glift.widgets.create({
+        sgf: testdata.sgfs.complexproblem,
         divId: "glift_display1",
         theme: "DEFAULT",
       });
-      var basicProblem2 = glift.widgets.basicProblem({
-        sgfString: testdata.sgfs.complexproblem,
+      var basicProblem2 = glift.widgets.create({
+        sgf: testdata.sgfs.complexproblem,
         divId: "glift_display2",
         theme: "DEPTH",
         goBoardBackground: '../themes/assets/bambootile_warm.jpg'
       });
-      var basicProblem3 = glift.widgets.basicProblem({
-        sgfString: testdata.sgfs.complexproblem,
+      var basicProblem3 = glift.widgets.create({
+        sgf: testdata.sgfs.complexproblem,
         divId: "glift_display3",
         theme: "TEXTBOOK",
       });
-      var basicProblem4 = glift.widgets.basicProblem({
-        sgfString: testdata.sgfs.complexproblem,
+      var basicProblem4 = glift.widgets.create({
+        sgf: testdata.sgfs.complexproblem,
         divId: "glift_display4",
         theme: "MOODY",
       });
-      var basicProblem5 = glift.widgets.basicProblem({
-        sgfString: testdata.sgfs.complexproblem,
+      var basicProblem5 = glift.widgets.create({
+        sgf: testdata.sgfs.complexproblem,
         divId: "glift_display5",
         theme: "TRANSPARENT",
       });
