Some minor fixes (9x9/13x13s weren't displaying correctly).

--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -111,15 +111,20 @@
       <script type="text/javascript">
         //glift.global.performanceDebugLevel = 'info'
         var basicProblem = glift.widgets.create({
-          divId: "glift_display1"
+          divId: "glift_display1",
           sgfList: [
+            {
+              url: "../testdata/problem9.sgf",
+              initialPosition: '1'
+            },
+            "../testdata/problem10.sgf",
             "../testdata/ajax3_13.sgf",
             "../testdata/ajax_problem.sgf",
             "../testdata/ajax_problem2.sgf",
             "../testdata/9x9prob.sgf"
           ],
-          sgfOptions: {
-            widgetType: 'STANDARD_PROBLEM
+          sgfDefaults: {
+            widgetType: 'STANDARD_PROBLEM'
           }
         });
       </script>
