Remove the dependency on fastclick.

--- a/src/htmltests/KogosTester.html
+++ b/src/htmltests/KogosTester.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 <script type="text/javascript" src="../testdata/kogos3.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
+<script src="../libs/modernizr.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
