--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 <script type="text/javascript" src="../testdata/gogameguru_commentary.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
+<script src="../libs/modernizr.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
