--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../qunit/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../qunit/qunit.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script src="../libs/modernizr.js"></script>
 
 <style>
 #glift_display {
