--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -37,6 +37,7 @@
 <script type="text/javascript" src="../displays/cropbox.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
+<script type="text/javascript" src="../displays/position_widget.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
 <!-- Displays board -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
