--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -5,7 +5,6 @@
 <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
-<script src="../libs/modernizr.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
@@ -128,6 +127,9 @@
           sgfDefaults: {
             widgetType: 'STANDARD_PROBLEM'
           }
+        });
+        $(window).resize(function() {
+          basicProblem.destroy().draw();
         });
       </script>
     </div>
