--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -53,10 +53,11 @@
 <script type="text/javascript" src="../displays/gui/gui.js"></script>
 <script type="text/javascript" src="../displays/gui/center.js"></script>
 <script type="text/javascript" src="../displays/gui/comment_box.js"></script>
-<script type="text/javascript" src="../displays/gui/icon_bar.js"></script>
-<script type="text/javascript" src="../displays/gui/icons.js"></script>
 <script type="text/javascript" src="../displays/gui/position.js"></script>
 <script type="text/javascript" src="../displays/gui/split.js"></script>
+<!-- Displays icons -->
+<script type="text/javascript" src="../displays/icons/bar.js"></script>
+<script type="text/javascript" src="../displays/icons/svg.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -101,7 +102,7 @@
 
 (function() {
   console.log("foom!");
-  var paper = Raphael('glift_display1', 100, 100);
+  var paper = Raphael('glift_display1', 1000, 1000);
   for (var key in glift.displays.gui.icons) {
     var pathobj = paper.path(glift.displays.gui.icons[key].string);
     var bbox = pathobj.getBBox();
