--- a/src/htmltests/IconBoardTester.html
+++ b/src/htmltests/IconBoardTester.html
@@ -58,6 +58,7 @@
 <script type="text/javascript" src="../displays/gui/position.js"></script>
 <script type="text/javascript" src="../displays/gui/split.js"></script>
 <!-- Displays icons -->
+<script type="text/javascript" src="../displays/icons/icons.js"></script>
 <script type="text/javascript" src="../displays/icons/bar.js"></script>
 <script type="text/javascript" src="../displays/icons/svg.js"></script>
 <!-- Rules -->
