--- a/src/htmltests/IconBoardTester.html
+++ b/src/htmltests/IconBoardTester.html
@@ -17,7 +17,6 @@
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
-<script type="text/javascript" src="../util/fastclick.js"></script>
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
@@ -94,6 +93,7 @@
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
+<script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
