--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -38,7 +38,6 @@
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
-<script type="text/javascript" src="../util/fastclick.js"></script>
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
@@ -115,6 +114,7 @@
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
+<script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
