--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -57,6 +57,7 @@
 <script type="text/javascript" src="../displays/icons/icons.js"></script>
 <script type="text/javascript" src="../displays/icons/bar.js"></script>
 <script type="text/javascript" src="../displays/icons/svg.js"></script>
+<script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -124,7 +125,7 @@
         var iconBar = glift.displays.icons.bar({
             divId: 'glift_display',
             vertMargin:  5,
-            icons:  ['chevron-left', 'refresh', 'chevron-right', 'roadmap', 'small-gear',
+            icons:  ['chevron-left', 'refresh', 'chevron-right', 'roadmap', 'small-gear', 'multiopen-boxonly',
                 ['question-bubble', 'undo', 'twostones']]
         });
 
