--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -51,11 +51,11 @@
 <script type="text/javascript" src="../displays/gui/gui.js"></script>
 <script type="text/javascript" src="../displays/gui/center.js"></script>
 <script type="text/javascript" src="../displays/gui/comment_box.js"></script>
-<script type="text/javascript" src="../displays/gui/position.js"></script>
 <script type="text/javascript" src="../displays/gui/split.js"></script>
 <!-- Displays icons -->
 <script type="text/javascript" src="../displays/icons/icons.js"></script>
 <script type="text/javascript" src="../displays/icons/bar.js"></script>
+<script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
 <script type="text/javascript" src="../displays/icons/svg.js"></script>
 <script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
 <!-- Rules -->
