--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" src="../displays/board_points.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
+<script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
 <script type="text/javascript" src="../displays/position_widget.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
@@ -138,6 +139,7 @@
 <script type="text/javascript" src="../displays/bbox_test.js"></script>
 <script type="text/javascript" src="../displays/cropbox_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
+<script type="text/javascript" src="../displays/ids_test.js"></script>
 <script type="text/javascript" src="../displays/position_widget_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
 <!-- Displays board Tests -->
@@ -150,7 +152,6 @@
 <!-- Displays diagrams Tests -->
 <script type="text/javascript" src="../displays/diagrams/gooe_test.js"></script>
 <!-- Displays svg Tests -->
-<script type="text/javascript" src="../displays/svg/path_test.js"></script>
 <script type="text/javascript" src="../displays/svg/pathutils_test.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj_test.js"></script>
 <!-- Rules Tests -->
@@ -188,6 +189,7 @@ $(document).ready(function() {
   glift.displays.environmentTest();
   glift.displays.resizedBoxTest();
   glift.displays.positionWidgetTest();
+  glift.displays.idsTest();
 
   glift.displays.icons.wrappedIconTest();
 
