--- a/src/htmltests/KogosTester.html
+++ b/src/htmltests/KogosTester.html
@@ -36,6 +36,7 @@
 <script type="text/javascript" src="../displays/board_points.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
+<script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
 <script type="text/javascript" src="../displays/position_widget.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
