Adding a huge number of icons to the board editor.

--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -98,12 +98,13 @@
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base_options.js"></script>
-<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
+<!-- Widgets options board_editor -->
+<script type="text/javascript" src="../widgets/options/board_editor/board_editor.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
